fix(ffe-lists): added margin collapse to numbered list and bullet list

--- a/packages/ffe-lists/less/regular-lists.less
+++ b/packages/ffe-lists/less/regular-lists.less
@@ -52,7 +52,7 @@
 .ffe-bullet-list {
     padding: 0;
     text-align: left;
-    margin: 0 0 20px;
+    margin: -10px 0 20px;
 
     > li {
         margin-top: 10px;
